# loyalt

./: .gitignore  README.md
code/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
code/backend/: .gitignore  LICENSE  backend.cabal
code/backend/src/: PointsValidator.hs
code/src/components/: userPointsContext.tsx
code/src/hooks/: userPointsConversion.tsx
code/src/pages/: _app.tsx  _document.tsx  customWallet.tsx  index.tsx  pointsConversion.tsx  profilePage.tsx  transaction.tsx
code/src/styles/: Home.module.css  Profile.module.css  globals.css
